# tg-summary-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
src/: config.py  main.py
src/aggregator/: pipeline.py  scheduler.py
src/aggregator/prompts/: digest_default.j2
src/aggregator/sources/: __init__.py  base.py  rss_example.py
src/bot/: commands.py  handlers.py
src/db/: database.py  models.py  queries.py
src/queue/: processor.py
src/services/: article_parser.py  formatter.py  llm_client.py  summarizer.py
tests/: conftest.py  test_config.py
tests/aggregator/: test_base.py  test_pipeline.py  test_rss.py  test_scheduler.py
tests/bot/: test_handlers.py
tests/db/: test_queries.py
tests/queue/: test_processor.py
tests/services/: test_article_parser.py  test_formatter.py  test_llm_client.py  test_summarizer.py
